# note

./: 404.html  CNAME  README.md  index.html  mkdocs.yml
.github/workflows/: ci.yml
Bookmarks/Blogs/: index.html
Books/: index.html
Computer-Science/Algorithm/: index.html
Computer-Science/Software-Engineering/: index.html
Misc/: index.html
Misc/1-qfst-quicklinks-for-services-and-tools/: index.html
Misc/2-qfia-quicklinks-for-information-access/: index.html
Misc/3-olr-online-learning-resources/: index.html
Misc/softwares/: index.html
Tools/Tools/: index.html
conf/: cards-ex.yaml  now.yaml
cs/pl/: index.html
cs/resources/: index.html
cs/todos/: index.html
docs/: HOME.md  README.md  ex.md  index.md  新鲜玩意.md
docs/.obsidian/: graph.json  workspace.json
docs/0-Misc/: 1-qfst-quicklinks-for-services-and-tools.md  2-qfia-quicklinks-for-information-access.md  3-olr-online-learning-resources.md  README.md
docs/0-bookmarks/: 1-websites.md  2-forums.md  3-blogs.md  4-podcasts.md
docs/1-Books/: README.md
docs/2-English/: README.md
docs/2-english/: resources.md
docs/3-IT/: IT-README.md  README.md
docs/3-cs/1-sd/02-pl/Cpp/CSE-CS101/letcs/3/lect-03-code/CorneredCircle/: CMakeLists.txt
docs/4-Math/: index.md
docs/Bookmarks/: Blogs.md
docs/Books/: README.md
docs/Misc/: 1-qfst-quicklinks-for-services-and-tools.md  2-qfia-quicklinks-for-information-access.md  3-olr-online-learning-resources.md
docs/Tools/: Tools.md
docs/books/: README.md  dictionary.md  english.md  it.md  online-docs.md
docs/conf/: fall23.yaml
docs/cs/: resources.md  todos.md
docs/cs/pl/Cpp/CSE-CS101/letcs/3/lect-03-code/BoxGrid/: CMakeLists.txt
docs/技能/: game.md  movie.md  music.md  podcast.md  vlog.md  健康.md  留学.md  穿搭.md
docs/数学/: README.md
docs/语文/: README.md
english/0-发音/: index.html
english/ielts/: index.html
ex/: index.html
includes/: 103-术语表.md  abbreviations.md
math/: index.html
search/: search_index.json
新鲜玩意/: index.html
(+547 files in other folders)
